[tool.poetry]
name = "pytrainsim"
version = "0.1.0"
description = ""
authors = ["Fabian <e11824496@student.tuwien.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pytest = "^8.3.2"
pandas = "^2.2.2"
tqdm = "^4.66.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
